# phase2-track3-day2-memory-systems-for-agents

./: BENCHMARK.md  README.md  REFLECTION.md  pyproject.toml  requirements.txt
data/: episodic.jsonl  profile.json  semantic.json
data/benchmark_runtime/scenario_01/: profile.json
data/benchmark_runtime/scenario_01/chroma/: chroma.sqlite3
data/benchmark_runtime/scenario_02/: profile.json
data/benchmark_runtime/scenario_02/chroma/: chroma.sqlite3
data/benchmark_runtime/scenario_03/: profile.json
data/benchmark_runtime/scenario_03/chroma/: chroma.sqlite3
data/benchmark_runtime/scenario_04/: profile.json
data/benchmark_runtime/scenario_04/chroma/: chroma.sqlite3
data/benchmark_runtime/scenario_05/: episodic.jsonl
data/benchmark_runtime/scenario_05/chroma/: chroma.sqlite3
data/benchmark_runtime/scenario_06/: episodic.jsonl
data/benchmark_runtime/scenario_06/chroma/: chroma.sqlite3
data/benchmark_runtime/scenario_07/chroma/: chroma.sqlite3
data/benchmark_runtime/scenario_08/: profile.json
data/benchmark_runtime/scenario_08/chroma/: chroma.sqlite3
data/benchmark_runtime/scenario_09/: profile.json
data/benchmark_runtime/scenario_09/chroma/: chroma.sqlite3
data/benchmark_runtime/scenario_10/: profile.json
data/chroma/: chroma.sqlite3
examples/: demo.py
reports/: BENCHMARK_REPORT.md
scripts/: chat_cli.py  generate_benchmark_report.py  serve_api.py
src/memory_agent/: __init__.py  agent.py  backends.py  graph.py  memory.py  openai_llm.py  prompt.py  state.py
tests/: test_memory_agent.py
(+1 files in other folders)
